# bmfont_parser

./: Cargo.toml  README.md
examples/: load_iosevka.rs  load_iosevka_bmfont.rs  load_iosevka_bmfont_includestr.rs  load_iosevka_includestr.rs
examples/fonts/: iosevka.fnt  iosevka.sfl
src/: bmfont_parser.rs  lib.rs  parser.rs  sfl_parser.rs
src/tests/: bmcharacter.rs  bmfont.rs  mod.rs
