[package]
name = "bmfont_parser"
description = "Lightweight and easy-to-use bitmap font parser (.sfl and .fnt files)"
version = "1.3.0"
authors = ["Teascade <teascade@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["bitmap", "parser", "bmfont", "sfl", "font"]
categories = ["parsing"]
repository = "https://github.com/Teascade/sfl_parser"
documentation = "https://docs.rs/sfl_parser"
edition = "2018"

[badges]
travis-ci = { repository = "Teascade/sfl_parser", branch = "1.2.0" }

[dependencies]
